api-builder/k8s/service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-builder
  namespace: ci
spec:
  selector:
    matchLabels:
      app: api-builder
  replicas: 1
  template:
    metadata:
      labels:
        app: api-builder
    spec:
      containers:
        - name: api-builder
          image: api-builder:1.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: api-builder
              containerPort: 9090
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 9090
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 9090
            initialDelaySeconds: 60
            periodSeconds: 20
            timeoutSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: api-builder
  namespace: ci
  labels:
    app: api-builder
spec:
  type: ClusterIP
  selector:
    app: api-builder
  ports:
    - protocol: TCP
      port: 9090
